Fix overflow bug on left panel

--- a/assets/css/components/panel--left.scss
+++ b/assets/css/components/panel--left.scss
@@ -1,5 +1,6 @@
 .panel--left {
-  padding: rem(56) var(--panel-padding-side) 0;
+  height: 100%;
+  padding: rem(56) 0 0;
   color: $color-white-170;
   @extend %font-ui-text-base-oxygen;
   background: $color-slate-600;
@@ -8,6 +9,7 @@
 .panel-left {
   .panel__content {
     height: 100%;
+    padding: 0 var(--panel-padding-side);
     overflow-y: auto;
   }
 
